# MySerial

./: .gitignore  ReadMe.md  Readme.md  Request.md  SerialCommunicator.cpp
.github/workflows/: build.yaml  build.yml
MySerial/: Multi-node_tester.bat  ReadMe.md  Request.md  SerialCommunicator.cpp  compile.bat
MySerial/TestRunner/: CMakeLists.txt  Readme.md  TestRunner.cpp  compile.bat
MySerial/TestRunner2/: CMakeLists.txt  ControlClient.cpp  ControlClient.h  ControlServer.cpp  ControlServer.h  Message.cpp  Message.h  ProcessManager.cpp  ProcessManager.h  Protocol.h  README.md  TestRunner2_run_1.json  TestRunner2_run_2.json  compile.bat  main.cpp
MySerial_Pipe/: CMakeLists.txt  README.md  main.cpp
